// Load this file using:
// var builder = ProtoBuf.loadProtoFile("channel-status.proto");

package ndn_message;

// Protobuf has no "outer" message type, so we need to put the TLV ChannelStatus
// message inside an outer "typeless" ChannelStatusMessage.
message ChannelStatusMessage {
  message ChannelStatus {
    required string local_uri = 129;
  }

  // A ChannelStatusMessage has repeated ChannelStatus.
  repeated ChannelStatus channel_status = 130;
}
